--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>apoorvagupta.com</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
